src/test/deca/context/invalid/test_invalid_override.deca
// Description:
//    Programme testant une redefinition incorrecte
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 23 : Le nouveau type retourné n'est pas un sous type de celui retourné par la méthode héritée
//
// Historique:
//    cree le 21/01/2021

class A  {
	int x = 5 ;
	int getX(){
		return x;
	}
}

class B extends A {
	string s = "gl27" ;
	string getX(){
		return s;
	}	
}

{
}
